--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,6 +1,6 @@
 #navbar {
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
   width: 100vw;
   padding: 1rem;
   background-color: black;
